--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -1,12 +1,136 @@
-{% extends "bootstrap_5_layout.html" %}
-{% set active_page = "home" %}
+<!DOCTYPE html>
+<html>
+<head>
+<title>Home</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-{% block content %}
+        <style>
+      
+    
+        
+        /*SPLIT SCREEN STYLE*/
+        .split {
+          height: 100%;
+          width: 50%;
+          position: fixed;
+          z-index: 0;
+          top: 0;
+          overflow-x: hidden;
+          padding-top: 20px;
+        }
+        
+        .left {
+          left: 0;
+          background-color: #092752e2;
+        }
+        
+        .right {
+          right: 0;
+          background-color: #8d817bbe;
+        }
+        
+        .centered {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          text-align: center;
+        }
+        
+        
+        .invert {
+            filter: invert(1);
+        }
+        
+        </style>
+        </head>
+        <body>
+            
+          <div class="split left">
+            <div>
+             <b><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-left:318px; margin-top:30%;">GEORGETOWN</i></b> 
+                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:18px;margin-left:574px;">Your one-stop-shop</h2>
+            </div>
+            <br>
+            <br>
+            <style>
+                .button {
+                    display: inline-block
+                    padding: 10px 20px;
+                    border-radius: 30px;
+                    background-color: white;
+                    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+                    font-family: Arial, sans-serif;
+                    font-size: 18px;
+                    font-weight: bold;
+                    text-align: center;
+                    text-decoration: none;
+                    color: #555;
+                   
+                  
+                }
+                .button:hover {
+                    background-color: #f5f5f5;
+                    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+                    color: #333;
+                }
+            </style>
+        </head>
+        <body>
+            <a href="about.html" class="button"; style="margin-left:70%">ABOUT</a>
+            
+       
+        
+          </div>
+        
+          <div class="split right">
+            <div>
+             <b><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-left:1%; margin-top: 30%;">UNIVERSITY</i></b>
+                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:18px;margin-left:.5%;">for Georgetown swag</h2> 
+            </div>
+            <br>
+            <br>
+            <style>
+                .button {
+                    display: inline-block;
+                    padding: 10px 20px;
+                    border-radius: 30px; 
+                    background-color: white;
+                    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+                    font-family: Arial, sans-serif;
+                    font-size: 18px;
+                    font-weight: bold;
+                    text-align: center;
+                    text-decoration: none;
+                    color: #555;
+                  
+                }
+                .button:hover {
+                    background-color: #f5f5f5;
+                    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+                    color: #333;
+                }
+            </style>
+        </head>
+        <body><center>
+            <a href="products.html" class="button"; style="margin-left:-35%">SHOP</a>
+            
+        </center>
+            
+            <!--
+            <div class="centered">
+              <b><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:55px;margin-left:-80%;">UNIVERSITY</i></b> 
+                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:18px;margin-left:-135%;">for Georgetown swag</h2>
+            </div>
+          </div
+        -->
+          
 
-    <h1>Home</h1>
 
-    <p class="lead">This is the home page.</p>
-
-    <p>Here is some more info!</p>
-
-{% endblock %}
+          
+    </body>
+</html>
