Configured Google API
I created a .env file to set up the google login and the google sheets. Added a google-credential.json file. Made a minor change to the login.html page because it didn't recognize the API changes so wouldn't make a commit.

--- a/web_app/templates/login.html
+++ b/web_app/templates/login.html
@@ -12,7 +12,7 @@
         <h1>Login</h1>
 
         <!--p class="lead mb-3">For existing users.</p-->
-        <p class="lead mb-3">For new or existing users.</p>
+        <p class="lead mb-3">For new or existing users</p>
 
         <div class="d-grid gap-2">
 
