Updated Home Page
Removed split background and fixed formatting issues

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -8,52 +8,24 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-        <style>
-      
     
-        
-        /*SPLIT SCREEN STYLE*/
-        .split {
-          height: 100%;
-          width: 50%;
-          position: fixed;
-          z-index: 0;
-          top: 0;
-          overflow-x: hidden;
-          padding-top: 20px;
-        }
-        
-        .left {
-          left: 0;
-          background-color: #092752e2;
-        }
-        
-        .right {
-          right: 0;
-          background-color: #8d817bbe;
-        }
-        
-        .centered {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          text-align: center;
-        }
-        
-        
-        .invert {
-            filter: invert(1);
-        }
-        
-        </style>
         </head>
         <body>
             
-          <div class="split left">
-            <div>
-             <b><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-left:318px; margin-top:30%;">GEORGETOWN</i></b> 
-                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:18px;margin-left:574px;">Your one-stop-shop</h2>
+              <!--BACKGROUND COLOR-->
+    <body style="background-color: #092752e2">
+
+         <!--IMAGE-->
+      <center>
+              <img
+                src="hoyas.png"
+                style="width:25%; margin-top:7%;"
+            </center>   
+                <br>
+           
+          
+                <center><b><U><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-top:0%;">GEORGETOWN UNIVERSITY SWAG</i></b></U> 
+                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:20px;">Your one-stop-shop for Georgetown apparel, gifts, and more</h2></center> 
             </div>
             <br>
             <br>
@@ -64,10 +36,10 @@
                     border-radius: 30px;
                     background-color: white;
                     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-                    font-family: Arial, sans-serif;
+                    font-family: adobe caslon;
                     font-size: 18px;
                     font-weight: bold;
-                    text-align: center;
+                    text-align: left;
                     text-decoration: none;
                     color: #555;
                    
@@ -81,17 +53,10 @@
             </style>
         </head>
         <body>
-            <a href="about.html" class="button"; style="margin-left:70%">ABOUT</a>
-            
-       
+            <a href="about.html" class="button">ABOUT</a>
         
           </div>
-        
-          <div class="split right">
-            <div>
-             <b><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-left:1%; margin-top: 30%;">UNIVERSITY</i></b>
-                <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:18px;margin-left:.5%;">for Georgetown swag</h2> 
-            </div>
+
             <br>
             <br>
             <style>
@@ -101,10 +66,10 @@
                     border-radius: 30px; 
                     background-color: white;
                     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-                    font-family: Arial, sans-serif;
+                    font-family: adobe caslon;
                     font-size: 18px;
                     font-weight: bold;
-                    text-align: center;
+                    text-align: right;
                     text-decoration: none;
                     color: #555;
                   
@@ -117,7 +82,7 @@
             </style>
         </head>
         <body><center>
-            <a href="products.html" class="button"; style="margin-left:-35%">SHOP</a>
+            <a href="products2.html" class="button">SHOP</a>
             
         </center>
             
