--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "bootstrap_5_layout.html" %}
+<!-- {% extends "bootstrap_5_layout.html" %}
 {% set active_page = "about" %}
 
 {% block content %}
@@ -7,6 +7,168 @@
 
     <p class="lead">This is the about page</p>
 
-    <p>Here is some more info!</p>
+    <!DOCTYPE html>
+<html>
+<head>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+</style>
+</head>
+<body>
 
-{% endblock %}
+
+
+<!-- Navbar (sit on top) -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+</style>
+</head>
+<body>
+<div class="w3-top">
+    <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+      <a href="#home" class="w3-bar-item w3-button">The Georgetown Bookstore</a>
+      <!-- Right-sided navbar links. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+        <a href="#about" class="w3-bar-item w3-button">About</a>
+        <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      </div>
+    </div>
+  </div>
+  
+  <!-- Header -->
+  <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+    <img class="w3-image" src="georgetown backdrop.jpg" alt="backdrop" width="1400" height="800">
+    <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+      <h1 class="w3-xxlarge">One Stop Shop for Hoya Swag</h1>
+    </div>
+  </header>
+  
+  <!-- Page content -->
+  <div class="w3-content" style="max-width:1100px">
+  
+    <!-- About Section -->
+    <div class="w3-row w3-padding-64" id="about">
+      <div class="w3-col m6 w3-padding-large w3-hide-small">
+       <img src="Student.webp" class="w3-round w3-image w3-opacity-min" alt="Student" width="1000" height="1000">
+      </div>
+  
+      <div class="w3-col m6 w3-padding-large">
+        <h1 class="w3-center">Nervous for the school year?</h1>
+        <p class="w3-large"><h3> Backpacks, water bottles, school swag, and books, we got everything a Hoya could need to crush their their first semester at Georgetown </h3> </p>
+      </div>
+    </div>
+    
+    <hr>
+    
+    <!-- Menu Section -->
+    <div class="w3-row w3-padding-64" id="menu">
+      <div class="w3-col l6 w3-padding-large">
+        <h1 class="w3-center"><b><i>Our Exclusive Offers</i></b></h1><br>
+  
+        <p class="w3-large"><h3> The largest collection of Hoya gear available, including past and current versions of Hoya basketball jerseys  </h3> </p>
+  
+        <p class="w3-large"><h3> Come check out the 2023 releases of fresh official swag available, student discounts available during your first semester on campus </h3> </p>
+        
+      </div>
+      
+      <div class="w3-col l6 w3-padding-large">
+          
+        <img src="iverson.jpeg" class="w3-round w3-image w3-opacity-min" alt="bball" style="width:100%">
+        <head>
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <style>
+          * {
+            box-sizing: border-box;
+          }
+          
+          /* Create three equal columns that floats next to each other */
+          .column {
+            float: left;
+            width: 33.33%;
+            padding: 10px;
+            height: 300px; /* Should be removed. Only for demonstration */
+          }
+          
+          /* Clear floats after the columns */
+          .row:after {
+            content: "";
+            display: table;
+            clear: both;
+          }
+          </style>
+          </head>
+          <body>
+          
+          <h4><b><i>Allen Iverson</i></b></h4>
+          
+  
+  
+          </div>
+  
+    </div>
+  
+    <hr>
+  
+    <!-- Menu Section -->
+    <div class="w3-row w3-padding-64" id="menu">
+      <div class="w3-col l6 w3-padding-large">
+        <h1 class="w3-center"><b><i>Get Ready for class!</i></b></h1><br>
+  
+        <p class="w3-large"><h3> We are guaranteed to have all textbooks and required class materials for any Georgetown class.  Stop by and one of our staff would be happy to show you to all possible resources for your first semester on campus! </h3> </p>
+  
+        <p class="w3-large"><h3> Don't forget to check out our tutoring resources available for any additional prep work needed</h3> </p>
+     
+      </div>
+  
+     
+      <div class="w3-col l6 w3-padding-large">
+          
+        <img src="campus.webp" class="w3-round w3-image w3-opacity-min" alt="campus" style="width:100%">
+  
+  
+    <!-- Contact Section -->
+    <div class="w3-container w3-padding-64" id="contact">
+      <h1>Contact</h1><br>
+      <p>Feel free to stop by for any questions or also email univbookstore@georgetown.edu</p>
+     
+  
+     
+    </div>
+    
+  <!-- End page content -->
+  </div>
+  
+  
+  
+  </body>
+  </html>
+
+
+
+
+
+
+
+
+<!-- {% endblock %} --> -->
