--- a/web_app/templates/products2.html
+++ b/web_app/templates/products2.html
@@ -7,11 +7,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Products</title>
+    <title>Shop</title>
     <link rel="icon" type="image/jpg" href="images/favicon.ico">
     
     
     <style>
+      
         mark { 
           background-color: black;
           color: white;
@@ -22,15 +23,36 @@
 
   <body>
 
+    <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item active">
+          <a class="nav-link" href="home.html">HOME</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">ABOUT</a>
+        </li>
+        <li class="nav-item">
+          <u><a class="nav-link" href="#">SHOP</u></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="user_orders.html">CHECKOUT</a>
+        </li>
+      </ul>
+    </nav>
+                
+                  <!--BACKGROUND COLOR-->
+                  <body style="background-color: #092752e2">
+
     <div class="container" style="margin-top:2em;">
 
       <div>
-        <h1 style="font-size:54px;text-align: center; color:black; font-family: adobe caslon;">Products</h1>
+       <h1 style="font-size:50px;text-align: center; color:white; font-family: adobe caslon;">PRODUCTS</h1>
       </div>
 
       <div>
-        <h3 style="text-align: center; color: black; font-family: adobe caslon;">Apparel, Gifts, & More</h3>
+        <h3 style="text-align: center; font-size: 22px; color: white; font-family: adobe caslon;">Shop men and women's apparel, accessories, gifts, and more!</h3>
       </div>
+      <!--
       <div>
         <center><h5><u>Your one stop shop for</u><mark>Georgetown</mark><span style="text-decoration: overline">swag</span></h5></center>
       </div>
@@ -50,7 +72,7 @@
       <div class="row row-cols-3">
 
           <div class="card col" style="width: 25rem; margin:20px;">
-            <u><center><h4 class="card-title">Mens</h4></center></u>
+            <h4 style="font-size:18px;text-align: center; margin-top: 5%; color:black; font-family: adobe caslon;"><U>MEN'S APPAREL</h4></U> 
               <img src="https://images.footballfanatics.com/georgetown-hoyas/georgetown-hoyas-hoyas-over-mascot-club-fleece-hood-navy_ss10_p-101092390+u-pqasoljuv5mo3xvqnzj4+v-vcuzjh9pp946lqwyojmh.jpg?_hv=2&w=340 class="card-img-top" alt="men's hoodie" style="padding-top: 10px;">
               <div class="card-body">
             
@@ -58,7 +80,7 @@
           </div>
 
           <div class="card col" style="width: 25rem; margin:20px;">
-            <u><center><h4 class="card-title">Womens</h4></center></u>
+            <h4 style="font-size:18px;text-align: center; margin-top: 5%; color:black; font-family: adobe caslon;"><U>WOMEN'S APPAREL</h4></U> 
               <img src="https://images.footballfanatics.com/georgetown-hoyas/womens-cutter-and-buck-heather-gray-georgetown-hoyas-mainsail-sweater-knit-full-zip-jacket_pi5160000_ff_5160691-cbbb0b0489c9883f12a6_full.jpg?_hv=2&w=340"card-img-top" alt="women's jacket" style="padding-top: 10px;">
               <div class="card-body">
             
@@ -66,7 +88,7 @@
           </div>
 
           <div class="card col" style="width: 25rem; margin:20px;">
-            <u><center><h4 class="card-title">Gifts</h4></center></u>
+            <h4 style="font-size:18px;text-align: center; margin-top: 5%; color:black; font-family: adobe caslon;"><U>ACCESSORIES & GIFTS</h4></U> 
               <img src="https://images.footballfanatics.com/georgetown-hoyas/georgetown-hoyas-18oz-stainless-steel-soft-touch-tumbler_pi4251000_ff_4251018-513e88aca198a4c5f3a2_full.jpg?_hv=2&w=340"card-img-top" alt="tumbler" style="padding-top: 10px;">
               <!-- 
                 <div class="card-body">
