--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -19,12 +19,12 @@
       <center>
               <img
                 src="hoyas.png"
-                style="width:25%; margin-top:7%;"
+                style="width:25%; margin-top:4%;"
             </center>   
                 <br>
            
           
-                <center><b><U><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:55px;margin-top:0%;">GEORGETOWN UNIVERSITY SWAG</i></b></U> 
+                <center><b><U><i><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon; font-size:52px;margin-top:0%;">THE GEORGETOWN UNIVERSITY<BR>BOOKSTORE</i></b></U> 
                 <br><h2 style="color:hsl(0, 0%, 98%); font-family: adobe caslon;font-size:20px;">Your one-stop-shop for Georgetown apparel, gifts, and more</h2></center> 
             </div>
             <br>
