--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -49,6 +49,7 @@ h1, h2, h3, h4, h5, h6 {
       <a href="#home" class="w3-bar-item w3-button">The Georgetown Bookstore</a>
       <!-- Right-sided navbar links. Hide them on small screens -->
       <div class="w3-right w3-hide-small">
+        <a href="#home.html" class="w3-bar-item w3-button">Home</a>
         <a href="#about" class="w3-bar-item w3-button">About</a>
         <a href="#menu" class="w3-bar-item w3-button">Menu</a>
         <a href="#contact" class="w3-bar-item w3-button">Contact</a>
