--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 </style>
 </head>
-<body>
+<body> -->
 
 
 
@@ -31,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>About Us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -171,4 +171,4 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-<!-- {% endblock %} --> -->
+ {% endblock %} 
