--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -53,7 +53,7 @@
             </style>
         </head>
         <body>
-            <a href="about.html" class="button">ABOUT</a>
+            <a href="about" class="button">ABOUT</a>
         
           </div>
 
@@ -82,7 +82,7 @@
             </style>
         </head>
         <body><center>
-            <a href="products2.html" class="button">SHOP</a>
+            <a href="products2" class="button">SHOP</a>
             
         </center>
             
