Bootstrap 5 template updated for consistent styling.
Changed nav bar color to grey, added bulldog logo, updated the footer.

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -6,7 +6,7 @@
     <!DOCTYPE html>
 <html>
 <head>
-<title>W3.CSS Template</title>
+<title>About Us</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -21,8 +21,6 @@ h1, h2, h3, h4, h5, h6 {
 <body> -->
 
 
-
-<!-- Navbar (sit on top) -->
 
 <!DOCTYPE html>
 <html>
@@ -169,5 +167,4 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-<!-- {% endblock %} 
-  --> 
+{% endblock %} 
