--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -18,8 +18,8 @@
          <!--IMAGE-->
       <center>
               <img
-                src="hoyas.png"
-                style="width:25%; margin-top:4%;"
+                src="{{ url_for('static', filename='hoyas.png') }}"
+                style="width:15%; margin-top:4%;"
             </center>   
                 <br>
            
