--- a/web_app/templates/products2.html
+++ b/web_app/templates/products2.html
@@ -82,7 +82,7 @@
           </div>
 
           <div class="card col" style="width: 25rem; margin:20px;">
-            <a class="nav-link" href="womens.html".html">
+            <a class="nav-link" href="womens.html">
             <h4 style="font-size:18px;text-align: center; margin-top: 5%; color:black; font-family: adobe caslon;"><U>WOMEN'S APPAREL</h4></U> 
           </a>
             <img src="https://images.footballfanatics.com/georgetown-hoyas/womens-cutter-and-buck-heather-gray-georgetown-hoyas-mainsail-sweater-knit-full-zip-jacket_pi5160000_ff_5160691-cbbb0b0489c9883f12a6_full.jpg?_hv=2&w=340"card-img-top" alt="women's jacket" style="padding-top: 10px;">
@@ -114,3 +114,5 @@
     </script>
   </body>
 </html>
+
+{% endblock %}
