Style changes to the about page.

--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -52,10 +52,10 @@ h1, h2, h3, h4, h5, h6 {
   </div> -->
   
   <!-- Header -->
-  <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" alt="backdrop" width="1400" height="800">
-    <div class="w3-display-bottomleft w3-padding-large w3-opacity">
-      <h1 class="w3-xxlarge">One Stop Shop for Hoya Swag</h1>
+  <header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px;" id="home">
+    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" class="w3-round w3-image w3-opacity-min" alt="backdrop" width="1400" height="800">
+    <div class="w3-display-bottomleft w3-padding-large">
+      <h1 class="w3-xxlarge w3-text-white"><b>One Stop Shop for Hoya Swag</b></h1>
     </div>
   </header>
   
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
       </div>
   
       <div class="w3-col m6 w3-padding-large">
-        <h1 class="w3-center">Nervous for the school year?</h1>
+        <h1 class="w3-center"><b><i>Nervous for the school year?</i></b></h1><br>
         <p class="w3-large"><h3> Backpacks, water bottles, school swag, and books, we got everything a Hoya could need to crush their their first semester at Georgetown </h3> </p>
       </div>
     </div>
