--- a/web_app/templates/products2.html
+++ b/web_app/templates/products2.html
@@ -55,7 +55,7 @@
       <!--
       <div>
         <center><h5><u>Your one stop shop for</u><mark>Georgetown</mark><span style="text-decoration: overline">swag</span></h5></center>
-      </div>
+      </div> -->
        <!--
 
         RESPONSIVE GRID OF CARDS
@@ -114,5 +114,3 @@
     </script>
   </body>
 </html>
-
-{% endblock %}
