--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -68,13 +68,13 @@
     -->
     {% set public_nav = [
       ('/about', 'about', 'About'),
-      ('/products', 'products', 'Products'),
+      ('/products2', 'products', 'Products'),
       ('/login', 'login', 'Login'),
     ] -%}
 
     {% set protected_nav = [
       ('/about', 'about', 'About'),
-      ('/products', 'products', 'Products'),
+      ('/products2', 'products', 'Products'),
       ('/user/orders', 'user_orders', 'Orders'),
     ] -%}
 
