--- a/web_app/templates/products2.html
+++ b/web_app/templates/products2.html
@@ -26,10 +26,10 @@
     <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="home.html">HOME</a>
+          <a class="nav-link" href="home">HOME</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">ABOUT</a>
+          <a class="nav-link" href="about">ABOUT</a>
         </li>
         <li class="nav-item">
           <u><a class="nav-link" href="#">SHOP</u></a>
