--- a/web_app/templates/products2.html
+++ b/web_app/templates/products2.html
@@ -1,3 +1,24 @@
+
+<!-- {% extends "bootstrap_5_layout.html" %}
+{% set active_page = "about" %}
+
+{% block content %}
+
+<!--<div class="w3-top">
+    <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+      <a href="#home" class="w3-bar-item w3-button">The Georgetown Bookstore</a>
+      Right-sided navbar links. Hide them on small screens 
+      <div class="w3-right w3-hide-small">
+        <a href="#home.html" class="w3-bar-item w3-button">Home</a>
+        <a href="#about" class="w3-bar-item w3-button">About</a>
+        <a href="#menu" class="w3-bar-item w3-button">Menu</a>
+        <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+      </div>
+    </div>
+  </div> -->
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +44,7 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
+    <!-- <nav class="navbar navbar-expand-sm bg-secondary navbar-dark">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="home">HOME</a>
@@ -38,7 +59,7 @@
           <a class="nav-link" href="user_orders.html">CHECKOUT</a>
         </li>
       </ul>
-    </nav>
+    </nav> -->
                 
                   <!--BACKGROUND COLOR-->
                   <body style="background-color: #092752e2">
@@ -113,4 +134,9 @@
 
     </script>
   </body>
-</html>
+
+
+
+
+{% endblock %} 
+
