Updated google spreadsheet for products

--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -82,7 +82,7 @@
             </style>
         </head>
         <body><center>
-            <a href="products2.html" class="button">SHOP</a>
+            <a href="products.html" class="button">SHOP</a>
             
         </center>
             
