--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -74,7 +74,6 @@ h1, h2, h3, h4, h5, h6 {
       </div>
     </div>
     
-   <hr>
     
     <!-- Menu Section -->
     <div class="w3-row w3-padding-64" id="menu">
@@ -132,8 +131,7 @@ h1, h2, h3, h4, h5, h6 {
         <h1 class="w3-center"><b><i>Get Ready for class!</i></b></h1><br>
   
         <p class="w3-large"><h3> We are guaranteed to have all textbooks and required class materials for any Georgetown class.  Stop by and one of our staff would be happy to show you to all possible resources for your first semester on campus! </h3> </p>
-  
-        <p class="w3-large"><h3> Don't forget to check out our tutoring resources available for any additional prep work needed</h3> </p>
+
      
       </div>
   
@@ -141,12 +139,135 @@ h1, h2, h3, h4, h5, h6 {
       <div class="w3-col l6 w3-padding-large">
         
         <img src="{{ url_for('static', filename='campus.webp') }}" class="w3-round w3-image w3-opacity-min" alt="campus" style="width:100%">
-  
+
+           
+    </div>
+
   
     <!-- Contact Section -->
     <div class="w3-container w3-padding-64" id="contact">
       <h1>Contact</h1><br>
-      <p>Feel free to stop by for any questions or also email univbookstore@georgetown.edu</p>
+      <p> Please us the form below for any questions or feedback! </p>
+
+      <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xrgvjdlp" method="post">
+        <fieldset id="fs-frm-inputs">
+          <label for="full-name">Full Name</label>
+          <input type="text" name="name" id="full-name" placeholder="First and Last" required="">
+          <label for="email-address">Email Address</label>
+          <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="">
+          <label for="message">Message</label>
+          <textarea rows="5" name="message" id="message" placeholder="This website is awesome!" required=""></textarea>
+          <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+        </fieldset>
+        <input type="submit" value="Submit">
+      </form><style>/* reset */
+      #fs-frm input,
+      #fs-frm select,
+      #fs-frm textarea,
+      #fs-frm fieldset,
+      #fs-frm optgroup,
+      #fs-frm label,
+      #fs-frm #card-element:disabled {
+        font-family: inherit;
+        font-size: 100%;
+        color: inherit;
+        border: none;
+        border-radius: 0;
+        display: block;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+      }
+      #fs-frm label,
+      #fs-frm legend,
+      #fs-frm ::placeholder {
+        font-size: .825rem;
+        margin-bottom: .5rem;
+        padding-top: .2rem;
+        display: flex;
+        align-items: baseline;
+      }
+      
+      /* border, padding, margin, width */
+      #fs-frm input,
+      #fs-frm select,
+      #fs-frm textarea,
+      #fs-frm #card-element {
+        border: 1px solid rgba(0,0,0,0.2);
+        background-color: rgba(255,255,255,0.9);
+        padding: .75em 1rem;
+        margin-bottom: 1.5rem;
+      }
+      #fs-frm input:focus,
+      #fs-frm select:focus,
+      #fs-frm textarea:focus {
+        background-color: white;
+        outline-style: solid;
+        outline-width: thin;
+        outline-color: gray;
+        outline-offset: -1px;
+      }
+      #fs-frm [type="text"],
+      #fs-frm [type="email"] {
+        width: 100%;
+      }
+      #fs-frm [type="button"],
+      #fs-frm [type="submit"],
+      #fs-frm [type="reset"] {
+        width: auto;
+        cursor: pointer;
+        -webkit-appearance: button;
+        -moz-appearance: button;
+        appearance: button;
+      }
+      #fs-frm [type="button"]:focus,
+      #fs-frm [type="submit"]:focus,
+      #fs-frm [type="reset"]:focus {
+        outline: none;
+      }
+      #fs-frm [type="submit"],
+      #fs-frm [type="reset"] {
+        margin-bottom: 0;
+      }
+      #fs-frm select {
+        text-transform: none;
+      }
+      
+      #fs-frm [type="checkbox"] {
+        -webkit-appearance: checkbox;
+        -moz-appearance: checkbox;
+        appearance: checkbox;
+        display: inline-block;
+        width: auto;
+        margin: 0 .5em 0 0 !important;
+      }
+      
+      #fs-frm [type="radio"] {
+        -webkit-appearance: radio;
+        -moz-appearance: radio;
+        appearance: radio;
+      }
+      
+      /* address, locale */
+      #fs-frm fieldset.locale input[name="city"],
+      #fs-frm fieldset.locale select[name="state"],
+      #fs-frm fieldset.locale input[name="postal-code"] {
+        display: inline;
+      }
+      #fs-frm fieldset.locale input[name="city"] {
+        width: 52%;
+      }
+      #fs-frm fieldset.locale select[name="state"],
+      #fs-frm fieldset.locale input[name="postal-code"] {
+        width: 20%;
+      }
+      #fs-frm fieldset.locale input[name="city"],
+      #fs-frm fieldset.locale select[name="state"] {
+        margin-right: 3%;
+      }
+      </style>
      
   
      
