Update of product page routing
Redirected from products2.html to products.html. Minor routing change on home page

--- a/web_app/templates/bootstrap_5_layout.html
+++ b/web_app/templates/bootstrap_5_layout.html
@@ -68,13 +68,13 @@
     -->
     {% set public_nav = [
       ('/about', 'about', 'About'),
-      ('/products2', 'products', 'Products'),
+      ('/products', 'products', 'Products'),
       ('/login', 'login', 'Login'),
     ] -%}
 
     {% set protected_nav = [
       ('/about', 'about', 'About'),
-      ('/products2', 'products', 'Products'),
+      ('/products', 'products', 'Products'),
       ('/user/orders', 'user_orders', 'Orders'),
     ] -%}
 
