--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -53,7 +53,7 @@
             </style>
         </head>
         <body>
-            <a href="about.html" class="button">ABOUT</a>
+            <a href="about" class="button">ABOUT</a>
         
           </div>
 
@@ -84,7 +84,7 @@
         <body>
         <center>
 <!--<<<<<<< HEAD -->
-            <a href="products.html" class="button">SHOP</a>
+            <a href="products" class="button">SHOP</a>
 <!-- >>>>>>> 2006fc76dae821cfe3218937c1735960767e0c28  -->
             
         </center>
