--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -3,25 +3,6 @@
 
 {% block content %}
 
-    <!DOCTYPE html>
-<html>
-<head>
-<title>About Us</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
-</head>
-<body> 
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,15 +10,9 @@ h1, h2, h3, h4, h5, h6 {
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
 </head>
-<body>
+
+
 <!--<div class="w3-top">
     <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
       <a href="#home" class="w3-bar-item w3-button">The Georgetown Bookstore</a>
@@ -69,8 +44,8 @@ h1, h2, h3, h4, h5, h6 {
       </div>
   
       <div class="w3-col m6 w3-padding-large">
-        <h1 class="w3-center"><b><i>Nervous for the school year?</i></b></h1><br>
-        <p class="w3-large"><h3> Backpacks, water bottles, school swag, and books, we got everything a Hoya could need to crush their their first semester at Georgetown </h3> </p>
+        <h1><b>Nervous for the school year?</b></h1><br>
+        <p><h3> Backpacks, water bottles, school swag, and books, we got everything a Hoya could need to crush their their first semester at Georgetown </h3> </p>
       </div>
     </div>
     
@@ -78,11 +53,11 @@ h1, h2, h3, h4, h5, h6 {
     <!-- Menu Section -->
     <div class="w3-row w3-padding-64" id="menu">
       <div class="w3-col l6 w3-padding-large">
-        <h1 class="w3-center"><b><i>Our Exclusive Offers</i></b></h1><br>
+        <h1><b>Our Exclusive Offers</b></h1><br>
   
-        <p class="w3-large"><h3> The largest collection of Hoya gear available, including past and current versions of Hoya basketball jerseys  </h3> </p>
+        <p><h3> The largest collection of Hoya gear available, including past and current versions of Hoya basketball jerseys  </h3> </p>
   
-        <p class="w3-large"><h3> Come check out the 2023 releases of fresh official swag available, student discounts available during your first semester on campus </h3> </p>
+        <p><h3> Come check out the 2023 releases of fresh official swag available, student discounts available during your first semester on campus </h3> </p>
         
       </div>
       
@@ -114,7 +89,7 @@ h1, h2, h3, h4, h5, h6 {
          </head>
             <body>
           
-              <h4><b><i>Allen Iverson</i></b></h4>
+              <h4><b>Allen Iverson</b></h4>
             
             </body>
   
@@ -128,9 +103,9 @@ h1, h2, h3, h4, h5, h6 {
     <!-- Menu Section -->
     <div class="w3-row w3-padding-64" id="menu">
       <div class="w3-col l6 w3-padding-large">
-        <h1 class="w3-center"><b><i>Get Ready for class!</i></b></h1><br>
+        <h1><b>Get Ready for class!</b></h1><br>
   
-        <p class="w3-large"><h3> We are guaranteed to have all textbooks and required class materials for any Georgetown class.  Stop by and one of our staff would be happy to show you to all possible resources for your first semester on campus! </h3> </p>
+        <p><h3> We are guaranteed to have all textbooks and required class materials for any Georgetown class.  Stop by and one of our staff would be happy to show you to all possible resources for your first semester on campus! </h3> </p>
 
      
       </div>
