--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -27,8 +27,8 @@
   </div> -->
   
   <!-- Header -->
-  <header class="w3-display-container w3-content w3-wide" style="max: width 100%;;min-width:500px;" id="home">
-    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" class="w3-round w3-image w3-opacity-min" alt="backdrop" width="1400" height="800">
+  <header class="w3-display-container w3-content w3-wide" style="max-width: 1000px; min-width:100px;" id="home">
+    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" class="w3-round w3-image w3-opacity-min" alt="backdrop" width="100%" height="auto">
     <div class="w3-display-bottomleft w3-padding-large">
       <h1 class="w3-xxlarge w3-text-white"><b>One Stop Shop for Hoya Swag</b></h1>
     </div>
