--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -35,12 +35,12 @@
   </header>
   
   <!-- Page content -->
-  <div class="w3-content" style="max-width:1100px">
+  <div class="w3-content" style="max-width:900px">
     
     <!-- About Section -->
     <div class="w3-row w3-padding-64" id="about">
       <div class="w3-col m6 w3-padding-large w3-hide-small">
-       <img src="{{ url_for('static', filename='Student.webp') }}" class="w3-round w3-image w3-opacity-min" alt="Student" width="1000" height="1000">
+       <img src="{{ url_for('static', filename='Student.webp') }}" class="w3-round w3-image w3-opacity-min" alt="Student" width="500px" height="auto">
       </div>
   
       <div class="w3-col m6 w3-padding-large">
