--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -28,7 +28,7 @@
   
   <!-- Header -->
   <header class="w3-display-container w3-content w3-wide" style="max-width: 1000px; min-width:100px;" id="home">
-    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" class="w3-round w3-image w3-opacity-min" alt="backdrop" style="width:100%">
+    <img class="w3-image" src="{{ url_for('static', filename='georgetown-backdrop.jpg') }}" class="w3-round w3-image w3-opacity-min" alt="backdrop" width="100%" height="auto">
     <div class="w3-display-bottomleft w3-padding-large">
       <h1 class="w3-xxlarge w3-text-white"><b>One Stop Shop for Hoya Swag</b></h1>
     </div>
@@ -40,7 +40,7 @@
     <!-- About Section -->
     <div class="w3-row w3-padding-64" id="about">
       <div class="w3-col m6 w3-padding-large w3-hide-small">
-       <img src="{{ url_for('static', filename='Student.webp') }}" class="w3-round w3-image w3-opacity-min" alt="Student" width="500px" height="auto">
+       <img src="{{ url_for('static', filename='Student.webp') }}" class="w3-round w3-image w3-opacity-min" alt="Student" style="width:100%">
       </div>
   
       <div class="w3-col m6 w3-padding-large">
