--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -35,7 +35,7 @@
   </header>
   
   <!-- Page content -->
-  <div class="w3-content" style="max-width:900px">
+  <div class="w3-content">
     
     <!-- About Section -->
     <div class="w3-row w3-padding-64" id="about">
