--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -39,7 +39,7 @@
     
     <!-- About Section -->
     <div class="w3-row w3-padding-64" id="about">
-      <div class="w3-col m6 w3-padding-large w3-hide-small">
+      <div class="w3-col m6 w3-padding-large w3-padding-large">
        <img src="{{ url_for('static', filename='Student.webp') }}" class="w3-round w3-image w3-opacity-min" alt="Student" style="width:100%">
       </div>
   
